# Hughie-agent

./: .env.production.example  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml
docs/: deploy.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Icons.tsx  MarkdownContent.tsx
frontend/src/pages/: ChatPage.tsx  GraphPage.tsx  MemoryPage.tsx
frontend/src/store/: chatStore.ts
providers/codex-bridge-sdk/src/codex_bridge_sdk/: types.py
scripts/: deploy-prod.sh  github-actions-runner.service
src/hughie/: approvals.py  config.py  main.py
src/hughie/api/: server.py
src/hughie/api/static/: index.html
src/hughie/core/: graph.py  nodes.py  state.py
src/hughie/host_agent/: __init__.py  client.py  server.py
src/hughie/llm/: broker_runtime.py  codex_chat_model.py
src/hughie/memory/: brain_graph.py  brain_store.py  consolidator.py  conversation_store.py  database.py  embeddings.py  episode_store.py  file_reader.py  link_store.py  maintenance.py  migrations.py  rag.py
src/hughie/prompts/: __init__.py  consolidation.md  episode.md  merge.md  system.md
src/hughie/scheduler/: __init__.py
src/hughie/tools/: brain_tools.py  filesystem_tools.py  mcp_loader.py  registry.py  shell_tool.py  ssh_tools.py  web_search_tool.py
tests/unit/: test_brain_graph.py  test_brain_store.py  test_core_nodes.py  test_episode_store.py  test_host_agent_routing.py  test_maintenance.py  test_rag.py
